# worldmonitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  angular.json  build.rs  docker-compose.yml  news_list.json  package-lock.json  package.json  rss_proxy.jl  tsconfig.spec.json
js/: angular.json  country_list.json  karma.conf.js  package-lock.json  package.json
js/src/: index.html  test.ts
js/src/app/: app.component.html  app.component.spec.ts  app.component.ts  article.ts  news.service.spec.ts  news.service.ts
js/src/app/country/: country.component.html  country.component.ts
js/src/app/newspanel/: newspanel.component.html  newspanel.component.less  newspanel.component.ts
js/src/app/newspanel/add-source-input/: add-source-input.component.html
js/src/app/worldmap/: worldmap.component.html  worldmap.component.less
js/src/assets/: news_list.json
rss_proxy/: Cargo.toml  rss_proxy.jl
rss_proxy/src/: main.rs
src/: index.html  main.rs
src/app/: app.component.html  app.component.ts  app.module.ts  country-data.ts  feed-list.service.ts  news.service.spec.ts  news.service.ts
src/app/country/: country.component.html  country.component.ts
src/app/newspanel/: newspanel.component.html  newspanel.component.less  newspanel.component.spec.ts  newspanel.component.ts
src/app/newspanel/add-source-input/: add-source-input.component.spec.ts  add-source-input.component.ts
src/app/worldmap/: worldmap.component.html  worldmap.component.less  worldmap.component.ts
src/assets/: news_list.json
