[package]
name = "worldmonitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-static-files = "4.0"
static-files = "0.2.1"
actix-cors = "0.6.4"
serde = { version = "1.0.47", features = ["derive"] }
chrono = "0.4.22"
roxmltree = "0.15.1" 
reqwest = { version = "0.11.12", features = ["json"] }

[build-dependencies]
static-files = "0.2.1"
